<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp" >

    <EditText
        android:id="@+id/et_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/et_nombre">
        <requestFocus/>

    </EditText>

    <EditText
        android:id="@+id/et_apellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/et_apellido">

    </EditText>


    <TextView
        android:id="@+id/et_cumple"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="Fecha"
        android:text="@string/et_cumple"
        android:textSize="18sp">

    </TextView>

    <EditText
        android:id="@+id/et_telefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/et_telefono"
        android:inputType="number"></EditText>

    <Button
        android:id="@+id/bt_cumple"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/bt_cumple" />

    <Button
        android:id="@+id/bt_guardar"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/bt_guardar" />

</LinearLayout>